<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".SignUpActivity" >

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:hint="@string/password_min_char_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button"
        android:layout_below="@+id/passwordField"
        android:text="@string/sign_up_button_label" />

    <Button
        android:id="@+id/accountExists"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="35dp"
        android:textAlignment="center"
        android:background="@drawable/edittextborder"
        android:text="@string/account_exists"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
