<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true" >

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="45dp"
            android:paddingLeft="20dp"
            android:text="@string/first_name"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/firstName"
            android:layout_alignBottom="@+id/firstName"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@id/firstName"
            android:ems="10"
            android:paddingRight="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstName"
            android:layout_alignLeft="@id/firstName"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/last_name"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lastName"
            android:layout_alignBottom="@+id/lastName"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@id/lastName"
            android:ems="10"
            android:paddingRight="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/lastName"
            android:layout_alignLeft="@id/firstName"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:text="@string/phone"
            />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/lastNameEditText"
            android:layout_alignRight="@id/firstNameEditText"
            android:layout_alignBaseline="@id/phone"
            android:layout_alignBottom="@id/phone"
            android:layout_toRightOf="@id/phone"
            android:ems="10"
            android:paddingRight="10dp"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="10" />

    </RelativeLayout>

</ScrollView>